--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.5.5"
   }
 }
